Fix for Reflection error with Robolectric